# scholia

./: .dockerignore  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .readthedocs.yml  .travis.yml  CITATION  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  DOCUMENTATION.md  Dockerfile  ISSUE_TEMPLATE.md  LICENSE.DataTables  MANIFEST.in  PULL_REQUEST_TEMPLATE.md  README-apache-config.md  README.apache-config.md  README.rst  docker-compose.yml  i18n_create_json.py  requirements.txt  runserver.py  scholia.cfg  setup.cfg  setup.py  startScholia.sh  tox.ini  transform_sparql.py  versioneer.py  wsgi.py
.github/ISSUE_TEMPLATE/: _bug_report.md  _feature_request.md  _question.md  add-new-aspect.md  add-new-panel.md  config.yml  data-quality-issue.md  documentation-issue.md  feature_request.md  modify-a-sparql-query.md  question.md
.github/linters/: .flake8
.github/workflows/: codeql-analysis.yml  docker-image.yml  (+1 more)
docs/: api.rst  code_of_conduct.rst  conf.py  getting_started.rst  index.rst  issue_template.rst  issues.rst  pull_request.rst  pull_request_template.rst  requirements.txt  scholia.rst
nginx/: Dockerfile  nginx.conf
notebooks/: investigation-of-text-to-q-text-setup.ipynb  pageview-statistics.ipynb
scholia/: __init__.py  __main__.py  _version.py  api.py  app.py  arxiv.py  arxiv_.py  config.py  doi.py  github.py  googlescholar.py  model.py  network.py  qs.py  query.py  rss.py  snap.py  tex.py  text.py  utils.py  wikipedia.py
tests/: test_arxiv.py  test_ask_query.py  test_query.py  test_scrape_ojs.py  test_tex.py  test_text.py  test_utils.py
(+964 files in other folders)
