
# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = scholia/_version.py
versionfile_build = scholia/_version.py
tag_prefix = v
parentdir_prefix = scholia-

[flake8]
max-line-length = 79
ignore = E203,E501,W503,W504,W605

[options.entry_points]
console_scripts =
    scholia = scholia.__main__:main
